--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
@@ -14,6 +15,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "swiper": "^8.2.4",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
     "zustand": "^4.0.0-rc.1"
   },
